--- a/apps/dashboard-mfe/src/app/app.component.html
+++ b/apps/dashboard-mfe/src/app/app.component.html
@@ -1,3 +1,3 @@
-<dijkstra-web-nx-welcome>
-  <div>Hello</div>
-</dijkstra-web-nx-welcome>
+<dijkstra-web-header></dijkstra-web-header>
+<router-outlet class="bar"></router-outlet>
+<dijkstra-web-footer></dijkstra-web-footer>
